[package]
name = "ia-tools"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "ia-advanced-search"
path = "src/bin/ia-advanced-search.rs"

[[bin]]
name = "download-from-json"
path = "src/bin/download-from-json.rs"

[[bin]]
name = "download-collections"
path = "src/download_collections.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs"] }
indicatif = "0.17"
regex = "1.10"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
globset = "0.4"
percent-encoding = "2.3"
atty = "0.2"
